#adding project folders:
add_subdirectory(LinkedList)
add_subdirectory(QueueWithArray)
add_subdirectory(QueueWithLinkedList)
add_subdirectory(StackWithArray)
add_subdirectory(StackWithLinkedLIst)

# add_subdirectory(BinarySearchTree_Delete)
# add_subdirectory(BinarySearchTree_Insertion)
# add_subdirectory(BinarySearchTree_Searching)
# add_subdirectory(Graph)
# add_subdirectory(MinAndMaxHeap)
# add_subdirectory(Trie)


